XMLExper/m12/m12_514_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::DeepCopy(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:2278:51: error: ‘class tinyxml2::XMLNode’ has no member named ‘Clear’
 2278 |  /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(target)->Clear();
      |                                                   ^~~~~
diff: tinyxml2.S: No such file or directory
